[package]
name = "microservices"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "auth"
path = "src/auth-service/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "health-check"
path = "src/health-check-service/main.rs"

[dependencies]
tonic = "0.14.2"
prost = "0.14.1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1.18.1", features = ["v4"] }
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rand_core = { version = "0.9.3", features = ["std"] }
clap = { version = "4.5.48", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "0.14.2"

