[package]
name = "microservices"
version = "0.1.0"
edition = "2024"

[lints.rust]
unused_imports = "allow"
unused_variables = "allow"
unreachable_code = "allow"
dead_code = "allow"

[[bin]]
name = "auth"
path = "src/auth-service/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "health-check"
path = "src/health-check-service/main.rs"

[dependencies]
tonic = "0.9" # used by all
prost = "0.11"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1.18.1", features = ["v4"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
clap = { version = "4.5.48", features = ["derive"] }

[build-dependencies]
tonic-build = "0.9"

